--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<h1>Name Generator Form</h1>
 			<div class="form-group">
 			  <label for="month & year">Date of Birth</label>
-			  <input type="datetime-local" id="month & year" placeholder="Enter Date of Birth" />
+			  <input type="date" id="month & year" placeholder="Enter Date of Birth" />
 			  <input type="radio" name="gender" value="male" id="male">
 			  <label for="male">Male</label>
 			  <input type="radio" name="gender" value="female" id="female">
