--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 			    <input type="radio" name="gender" value="female" id="female">
 			    <label for="female">Female</label>
 			   </div>					       
-			  <input type="submit" value="Submit"
+	                   <button id="button-cancel">Cancel</button>
+		           <button id="button-submit">Submit</button>
 			</div>
 		 </form>
 		</div>
