--- a/index.html
+++ b/index.html
@@ -121,29 +121,31 @@
 
 <!--- Start Form Section -->
 <div id="form" class="offset">
-
-    <div class="container">
+           <div class="container">
 		<div class="jumbotron">
 		  <p class="lead">Enter the Date of Birth and Gender and press the submit button wait the website to display the Akan name.</p>
-		  <form class="centered" id="form-user>
+		  <form class="centered" id="form-user">
 			<h1>Name Generator Form</h1>
-			<div class="form-group">
-			   <div class="form-box" id="birthday">	       
-			    <label for="birthday">Date of Birth</label>
+			<div class="form-group>
+			  <div class="form-box" id="birthday">
+			    <label for="day Of Birth">Date of Birth</label>
 			    <input type="date" id="birthday" name="birthday" placeholder="Enter Date of Birth" />
-                           </div>
-		           <div class="form-box" id="gender">
-			    <input type="radio" name="gender" value="male" id="male">
-			    <label for="male">Male</label>
-			    <input type="radio" name="gender" value="female" id="female">
-			    <label for="female">Female</label>
-			   </div>					       
-	                   <button id="button-cancel">Cancel</button>
-		           <button id="button-submit">Submit</button>
+			  </div>
+			  <div class="form-box" id="gender">
+			   <input type="radio" name="gender" value="male" id="male">
+			   <label for="male">Male</label>
+			   <input type="radio" name="gender" value="female" id="female">
+			   <label for="female">Female</label>
+			  </div>
+			  <button id="button-cancel">Cancel</button>
+			  <button id="button-submit">Submit</button>
 			</div>
-		 </form>
-		</div>
+		  </form>
+	  </div>
     </div>	
+
+
+	  	
 
 
 </div>
