--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<a class="nav-link" href="#home">Home</a>
 			</li>
 
-            <li class"nav-item">
+                        <li class"nav-item">
 				<a class="nav-link" href="#about">About</a>
 			</li>
 			<li class"nav-item">
@@ -127,10 +127,13 @@
 		  <form class="centered" id="form-user">
 			<h1>Name Generator Form</h1>
 			<div class="form-group>
-			  <div class="form-box" id="birthday">
-			    <label for="day Of Birth">Date of Birth</label>
-			    <input type="date" id="birthday" name="birthday" placeholder="Enter Date of Birth" />
-			  </div>
+			  <div class="form-box" id="birthday"
+			  <label for="BIRTHDAY-month">Birthday </label>
+	                  <div class="datefield">
+		          <span class="subfield monthfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month"></span> / 
+		          <span class="subfield dayfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day"></span> 
+		          <span class="small-meta nowrap">( mm / dd )</span>
+                         </div>
 			  <div class="form-box" id="gender">
 			   <input type="radio" name="gender" value="male" id="male">
 			   <label for="male">Male</label>
